Wed May 22 16:52:37 2002                        Michael Jennings (mej)

Cleanups of Escreen stuff.  Always use MALLOC/FREE, not malloc/free.
----------------------------------------------------------------------
Thu May 23 14:12:28 2002                        Michael Jennings (mej)

More cleanups and warning removals.
----------------------------------------------------------------------
Sun Jun  2 20:23:07 2002                        Michael Jennings (mej)

Latest Escreen patch along with twin support from Azundris.
----------------------------------------------------------------------
Sun Jun  2 20:25:55 2002                        Michael Jennings (mej)

Oops, missed these.
----------------------------------------------------------------------
Sat Jun  8 11:41:37 2002                        Michael Jennings (mej)

Escreen update with Twin support from Azundris <scream@azundris.com>.
----------------------------------------------------------------------
Sat Jun  8 12:46:44 2002                        Michael Jennings (mej)

My own Escreen updates, primarily for devoting a dedicated buttonbar
to Escreen's use.  This keeps Escreen from trodding on your existing
buttonbar, if you have one.  It's hard-coded to bottom-dock right
now; we'll look at configuration later. :-)
----------------------------------------------------------------------
Fri Jun 14 01:40:50 2002                        Michael Jennings (mej)

Fixed a couple bugs, trying to track down some others.
----------------------------------------------------------------------
Fri Jun 14 01:58:36 2002                        Michael Jennings (mej)

Fixed a problem with Ctrl-< and Ctrl-> in Escreen mode.
----------------------------------------------------------------------
Fri Jun 14 09:05:49 2002                        Michael Jennings (mej)

This should fix the bug Creepy spotted where the buttonbar event
initialization was crashing.
----------------------------------------------------------------------